; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/adns/client/extr_adh-query.c_of_cancel_id.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/adns/client/extr_adh-query.c_of_cancel_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.query_node* }
%struct.query_node = type { i32, %struct.query_node*, i32 }
%struct.optioninfo = type { i32 }

@outstanding = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @of_cancel_id(%struct.optioninfo* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.optioninfo*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.query_node*, align 8
  store %struct.optioninfo* %0, %struct.optioninfo** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load %struct.query_node*, %struct.query_node** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @outstanding, i32 0, i32 0), align 8
  store %struct.query_node* %8, %struct.query_node** %7, align 8
  br label %9

9:                                                ; preds = %22, %3
  %10 = load %struct.query_node*, %struct.query_node** %7, align 8
  %11 = icmp ne %struct.query_node* %10, null
  br i1 %11, label %12, label %19

12:                                               ; preds = %9
  %13 = load %struct.query_node*, %struct.query_node** %7, align 8
  %14 = getelementptr inbounds %struct.query_node, %struct.query_node* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 8
  %16 = load i8*, i8** %5, align 8
  %17 = call i64 @strcmp(i32 %15, i8* %16)
  %18 = icmp ne i64 %17, 0
  br label %19

19:                                               ; preds = %12, %9
  %20 = phi i1 [ false, %9 ], [ %18, %12 ]
  br i1 %20, label %21, label %26

21:                                               ; preds = %19
  br label %22

22:                                               ; preds = %21
  %23 = load %struct.query_node*, %struct.query_node** %7, align 8
  %24 = getelementptr inbounds %struct.query_node, %struct.query_node* %23, i32 0, i32 1
  %25 = load %struct.query_node*, %struct.query_node** %24, align 8
  store %struct.query_node* %25, %struct.query_node** %7, align 8
  br label %9

26:                                               ; preds = %19
  %27 = load %struct.query_node*, %struct.query_node** %7, align 8
  %28 = icmp ne %struct.query_node* %27, null
  br i1 %28, label %30, label %29

29:                                               ; preds = %26
  br label %37

30:                                               ; preds = %26
  %31 = load %struct.query_node*, %struct.query_node** %7, align 8
  %32 = getelementptr inbounds %struct.query_node, %struct.query_node* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  %34 = call i32 @adns_cancel(i32 %33)
  %35 = load %struct.query_node*, %struct.query_node** %7, align 8
  %36 = call i32 @dequeue_query(%struct.query_node* %35)
  br label %37

37:                                               ; preds = %30, %29
  ret void
}

declare dso_local i64 @strcmp(i32, i8*) #1

declare dso_local i32 @adns_cancel(i32) #1

declare dso_local i32 @dequeue_query(%struct.query_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
